--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <a-scene mindar-image="imageTargetSrc:bear.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <a-asset-item id="bearModel" src="bear.gltf"></a-asset-item>
-        <a-asset-item id="raccoonModel" src="racoon.gltf"></a-asset-item>
+        <a-asset-item id="bearModel" src="bears.glb"></a-asset-item>
+        <a-asset-item id="raccoonModel" src="teddybear.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
